# Yoo-Hee-Sung

./: Development of a Deep Learning-Based Face Recognition Model for Drowsy Driving Prevention  README.md
파이프 탐사 로봇/: .gitianore  CMakeLists.txt  package.xml
파이프 탐사 로봇/include/inpipe_robot/: ipir_bringup.hpp  ipir_joint_positions.hpp  ipir_locomotions.hpp  ipir_mapper.hpp  ipir_odometry.hpp  ipir_wheel_control.hpp  position_kinema_node.hpp  read_write_node.hpp
파이프 탐사 로봇/launch/: display.launch.py  gazebo.launch.py  rsp.launch.py  spawn_ipir.lanch.py
파이프 탐사 로봇/meshes/: base_link.stl  front_link.stl  front_wheel_link.stl  mid_1_link.stl  mid_2_link.stl  mid_wheel_link.stl  rear_link.stl  rear_wheel_link.stl  roll_motor_link.stl  roll_wheel_link.stl
파이프 탐사 로봇/models/demo_world/pipeline/: model.sdf
파이프 탐사 로봇/urdf/: ipir_joint.gazebo  ipir_joint.trans  ipir_joint.xacro  ipir_joint_backup.txt  materials.xacro
파이프 탐사 로봇/worlds/: demo_world.world  old_empty_world.world  pipeline_demo.sdf  pipeline_world.sdf
