<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>inpipe_robot</name>
  <version>4.0.0</version>
  <description>The In-pipe inspection robot package</description>
  <maintainer email="gogun0928@naver.com">Geonwoo Kho</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>

  <depend>tf2</depend>
  <depend>robot_localization</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>inpipe_robot_interfaces</depend>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>

  <depend>dynamixel_sdk</depend>
  <depend>dynamixel_sdk_custom_interfaces</depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_resource_path="${prefix}/models"/>
  </export>
</package>
